--- a/HTML/extra.html
+++ b/HTML/extra.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        
+    </style>
 </head>
 <body>
     <!-- <fieldset>
@@ -33,7 +36,7 @@
     <form>
         <!-- <fieldset>
             <legend>Form</legend> -->
-            <label>Number</label>
+            <label >Number</label>
             <br>
             <input type="number" placeholder="Enter Your Number">
             <br><br>
