css text-format, box-model

--- a/CSS/day-1.html
+++ b/CSS/day-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +10,12 @@
         /* p{
             background-color: red;
         } */
-
-        .header{
-           background-color: rgb(250, 18, 18); 
-           color: white;
-           text-align: center;
-           font-size: 25px;
-           font-weight: bold;
+        .header {
+            background-color: rgb(250, 18, 18);
+            color: white;
+            text-align: center;
+            font-size: 25px;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -26,16 +26,19 @@
     <!-- inline CSS -->
     <h1 class="heading">This is a CSS tutorial</h1>
 
-    <h1 class="heading" > Second heading</h1>
+    <h1 class="heading"> Second heading</h1>
 
-    <p style="background-color: skyblue;" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, doloribus.</p>
+    <p style="background-color: skyblue;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, doloribus.
+    </p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laborum voluptates, incidunt quis voluptatem explicabo voluptate totam obcaecati inventore iusto!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id laborum voluptates, incidunt quis voluptatem
+        explicabo voluptate totam obcaecati inventore iusto!</p>
 
-    <button class="button" >Home</button>
+    <button class="button">Home</button>
 
-    <button class="button" >About</button>
+    <button class="button">About</button>
 
-    <button class="button" >Contact</button>
+    <button class="button">Contact</button>
 </body>
+
 </html>
