CSS grid layout

--- a/CSS/flex.html
+++ b/CSS/flex.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         .parent {
             height: 100vh;
             width: 80px;
@@ -44,65 +46,66 @@
     <div class="parent">
         <div class="child">
             <center>
-            <span class="material-symbols-outlined">
-                home
-            </span>
-            <br>
-            <small>Home</small>
+                <span class="material-symbols-outlined">
+                    home
+                </span>
+                <br>
+                <small>Home</small>
             </center>
         </div>
         <div class="child">
             <center>
-            <span class="material-symbols-outlined">
-                videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+                <span class="material-symbols-outlined">
+                    videocam
+                </span>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
         <div class="child">
-             <center>
-            <span class="material-symbols-outlined">
-                videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+            <center>
+                <span class="material-symbols-outlined">
+                    videocam
+                </span>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
         <div class="child">
-             <center>
-            <span class="material-symbols-outlined">
-                videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+            <center>
+                <span class="material-symbols-outlined">
+                    videocam
+                </span>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
         <div class="child">
-             <center>
-            <span class="material-symbols-outlined">
-                videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+            <center>
+                <span class="material-symbols-outlined">
+                    videocam
+                </span>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
         <div class="child">
-             <center>
-            <span class="material-symbols-outlined">
-                videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+            <center>
+                <span class="material-symbols-outlined">
+                    videocam
+                </span>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
         <div class="child">
-             <center>
-            <span class="material-symbols-outlined">
+            <center>
+                <!-- <span class="material-symbols-outlined">
                 videocam
-            </span>
-            <br>
-            <small>Meetings</small>
+            </span> -->
+                <i style="font-size: 36px;" class='bx bx-megaphone-alt'></i>
+                <br>
+                <small>Meetings</small>
             </center>
         </div>
     </div>
