--- a/Bootstrap/project/index.html
+++ b/Bootstrap/project/index.html
@@ -32,27 +32,115 @@
                     <div class="col-md-2"></div>
                 </div>
             </div>
-            <div class="box-1">
+            <div class="box-1 border-bottom">
                 <div class="row">
-    <!-- Text content (appears first on desktop, second on mobile) -->
-    <div class="col-md-8 order-md-1 order-last p-3 box-1-left">
-        <p class="display-5 mb-3 p-4">Ipsum sed adipiscing</p>
-        <p class="mb-3 p-4">Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna adipiscing magna
-            etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum
-            dolor sit amet aliquam.</p>
-        <button class="px-5 py-3 rounded border-1 bg-white">Learn More</button>
-    </div>
-
-    <!-- Image (appears second on desktop, first on mobile) -->
-    <div class="col-md-4 order-md-2 order-first">
-        <div class="mobile-circle p-3 border d-flex justify-content-center align-items-center">
-            <img class="img-fluid" src="https://html5up.net/uploads/demos/stellar/images/pic01.jpg" alt="">
-        </div>
-    </div>
-</div>
+                    <div class="col-md-8 order-md-1 order-last p-3 box-1-left">
+                        <p class="display-5 mb-3 p-4">Ipsum sed adipiscing</p>
+                        <p class="mb-3 p-4">Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                            adipiscing magna
+                            etiam amet veroeros. Lorem ipsum dolor tempus sit cursus. Tempus nisl et nullam lorem ipsum
+                            dolor sit amet aliquam.</p>
+                        <button class="px-5 py-3 rounded border-1 bg-white">Learn More</button>
+                    </div>
+                    <div class="col-md-4 order-md-2 order-first">
+                        <div class="mobile-circle p-3 border d-flex justify-content-center align-items-center">
+                            <img class="img-fluid" src="https://html5up.net/uploads/demos/stellar/images/pic01.jpg"
+                                alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="box-2 border-bottom pb-5">
+                <div class="row mx-3">
+                    <div class="col-md-4 box-2-child col-sm-6 ">
+                        <div class="outer-circle border border-2 d-flex justify-content-center align-items-center">
+                            <div class="inner-circle border border-2 d-flex justify-content-center align-items-center">
+                                <h2>hello</h2>
+                            </div>
+                        </div>
+                        <p style="font-size: 28px; font-weight: 100;" class="my-3 text-center">Ipsum consequat</p>
+                        <p style="font-size: 20px; font-weight: 100;" class="my-3 text-center">Sed lorem amet ipsum
+                            dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                    </div>
+                    <div class="col-md-4 box-2-child col-sm-6 ">
+                        <div class="outer-circle border border-2 d-flex justify-content-center align-items-center">
+                            <div class="inner-circle border border-2 d-flex justify-content-center align-items-center">
+                                Hello
+                            </div>
+                        </div>
+                        <p style="font-size: 28px; font-weight: 100;" class="my-3 text-center">Ipsum consequat</p>
+                        <p style="font-size: 20px; font-weight: 100;" class="my-3 text-center">Sed lorem amet ipsum
+                            dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                    </div>
+                    <div class="col-md-4 box-2-child col-sm-6 ">
+                        <div class="outer-circle border border-2 d-flex justify-content-center align-items-center">
+                            <div class="inner-circle border border-2 d-flex justify-content-center align-items-center">
+                                Hello
+                            </div>
+                        </div>
+                        <p style="font-size: 28px; font-weight: 100;" class="my-3 text-center">Ipsum consequat</p>
+                        <p style="font-size: 20px; font-weight: 100;" class="my-3 text-center">Sed lorem amet ipsum
+                            dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="px-5 py-3 rounded border-1 bg-white">Learn More</button>
+                </div>
+            </div>
+            <div class="box-3 p-5 border-bottom">
+                <p class="text-center" style="font-size: 28px; font-weight: 100;">Ipsum consequat</p>
+                <p class="text-center my-5 mx-5 px-5" style="font-size: 22px; font-weight: 100;">Donec imperdiet
+                    consequat consequat. Suspendisse feugiat congue
+                    posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                <div class="inner-box-3 mx-3 d-flex container justify-content-center rounded">
+                    <div
+                        style="background-color: #efa8b0; border-bottom-left-radius: 10px; border-top-left-radius: 10px;">
+                        <p>6787</p>
+                        <p>gdhjd</p>
+                    </div>
+                    <div style="background-color: #c79cc8;">
+                        <p>6787</p>
+                        <p>gdhjd</p>
+                    </div>
+                    <div style="background-color: #a89cc8;">
+                        <p>6787</p>
+                        <p>gdhjd</p>
+                    </div>
+                    <div style="background-color: #9bb2e1;">
+                        <p>6787</p>
+                        <p>gdhjd</p>
+                    </div>
+                    <div
+                        style="background-color: #8cc9f0; border-bottom-right-radius: 10px; border-top-right-radius: 10px;">
+                        <p>6787</p>
+                        <p>gdhjd</p>
+                    </div>
+                </div>
+                <div class="row mx-5 p-5">
+                    <div class="col-md-6">
+                        <p style="font-size: 18px; font-weight: 100;">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit
+                            vel a risusNam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus.
+                            Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat
+                            sapien, sed eleifend a enim pulvinar</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p  style="font-size: 18px; font-weight: 100;">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit
+                            vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus.
+                            Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat
+                            sapien, sed eleifend a enim pulvinar</p>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="px-5 py-3 rounded border-1 bg-white">Learn More</button>
+                </div>
             </div>
         </div>
+
+
+        <h1>Hello</h1>
     </div>
 </body>
 
 </html>
+
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  -->
