Variables, datatypes, operators

--- a/Javascript/Basics/index.html
+++ b/Javascript/Basics/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <h1>Javascript Tutorial</h1>
+    <h1 style="border-bottom: 1px solid black;">Javascript Tutorial</h1>
+    <hr>
     <button onclick="showAlert()" >Alert</button>
 
     <script src="index.js">
