--- a/Javascript/Operators/Arithmatic.html
+++ b/Javascript/Operators/Arithmatic.html
@@ -18,9 +18,9 @@
 
     //Exponentiation Operator(**)
 
-    console.log(3**3);    //3*3*3
-    console.log(4**4);    //
-    console.log(5**5);
+    console.log(3**3);     //3 raise to power 3
+    console.log(2**3);   
+    console.log(5**3);    
 
 
 </script>
