Revision and animation

--- a/HTML/day-2.html
+++ b/HTML/day-2.html
@@ -36,6 +36,13 @@
         <li>Second Task</li>
     </ul>
 
+    <dl>
+        <dt>Array</dt>
+        <dd>Array is a collection of elements in JS</dd>
+        <dt>CSS</dt>
+        <dd>CSS is a stylesheet for HTML elements</dd>\
+    </dl>
+
     <!-- anchor tag/ hyperlink -->
     <a href="https://www.w3schools.com/html/" target="_blank" >W3School</a>
    <br>
