--- a/Javascript/ControlStatements/switch.html
+++ b/Javascript/ControlStatements/switch.html
@@ -8,7 +8,7 @@
 
     //=== 
 
-    switch (day) {
+    switch (day) {   //strict equality operator === 
         case '1':
             console.log('Monday');
             break;
