--- a/Javascript/Loop/L2.html
+++ b/Javascript/Loop/L2.html
@@ -4,11 +4,29 @@
     // while loop, do-while loop, for loop, for in loop, for of loop, forEach loop
 
 
-    let x = 999;
-    while(x<=1000){   //x==99/100
-        console.log(x);
-        x++;
+    // let x = 999;
+    // while(x<=1000){   //x==99/100
+    //     console.log(x);
+    //     x++;
+    // }
+
+    //false, null, 0, '', undefined
+
+    //iteration - number of times loop runs
+    let y = prompt('Enter a number smaller than 100');
+
+    while(y<=100){
+        console.log(y);
+        y++;
     }
+
+    let z= 10;
+    
+    while(z>0){
+        console.log(z);
+        z--;
+    }
+
 
 
 </script>
