--- a/Javascript/Loop/L5.html
+++ b/Javascript/Loop/L5.html
@@ -20,9 +20,9 @@
 
     let factorial = 1;
 
-    for(let i=num-1; i>=1; i--){
+    for(let i=num; i>=1; i--){
         console.log(factorial);
-        factorial += factorial*i;// factorial = factorial + factorial*i
+        factorial = factorial*i;// factorial = factorial + factorial*i
     }
 
 
