--- a/AdvanceJS/ECOM/index.html
+++ b/AdvanceJS/ECOM/index.html
@@ -20,6 +20,8 @@
                 </div>
                 <div class="col-md-6 text-end">
                     <span id="product-count" class="badge bg-light text-dark">Loading...</span>
+                    <a class="btn btn-outline-warning" href="cart.html">Cart</a>
+                    <button class="btn btn-outline-danger" onclick="logout()">Logout</button>
                 </div>
             </div>
         </div>
