--- a/AdvanceJS/web.html
+++ b/AdvanceJS/web.html
@@ -2,14 +2,23 @@
     //web API - when you have to communicate with different websites, server, etc.
     //fetch, axios
 
-
     //browser api - 
     //alert, promp, confirm, localStorage, sessionStorage, document, window
     //setTimeout, setInterval
 
     //geoLocation, notification, clipboard
 
-
-
     //browser dev tools - console, application 
+
+    alert('Hello');
+
+    let msg = prompt('Enter msg');
+
+    console.log(msg);
+
+    let ans = confirm();
+
+    console.log(ans);
+
+
 </script>
